# pico-macro-hid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pico_sdk_import.cmake
firmware/: CMakeLists.txt
firmware/config/: pins.h
firmware/include/: actions.h  buttons.h  display.h  profiles.h  usb_hid.h
firmware/src/: actions.c  buttons.c  display.c  main.c  profiles.c  usb_hid.c
include/: config.h  macros.h
src/: buttons.cpp  buttons.h  display.cpp  macros.cpp  main.cpp
